# ThatSkyMod-Android

./: .gitignore  CMakeLists.txt  CMakePresets.json  IconNames.lua  LICENSE.MD  README.md  libTSM_offsets.json  offsets.json
.github/workflows/: discord.yml
config/: config.json
include/core/: InitManager.h  UpdateChecker.h  main.h
include/data/: DataManager.h
include/data/loaders/: AssetLoader.h  LevelLoader.h
include/features/camera/: CameraControls.h
include/features/manager/: FeatureManager.h
include/features/music/: InstrumentManager.h  MusicSheetPlayer.h
include/game/data/: EdenData.h  OutfitData.h  RealmData.h  StanceData.h  UnlockData.h  VoiceData.h  WingLightData.h
include/game/hooks/: AccountHooks.h  HookManager.h  LuaHook.h  MusicKeyHook.h  MusicRecordHook.h  PianoFrameHook.h  ProgressionHooks.h  ShoutHook.h  hooks.h
include/game/interop/: LuaFunctions.h  LuaHelpers.h  LuaScriptQueue.h  lua_bridge.h
include/game/memory/: Address.h  Memory.h  Patch.h  api.h  mem.h  offsets.h
include/iconloader/: CustomIconLoader.h  GitHub_bmp.h
include/network/: ApiClient.h  CollectiblesApi.h  EdenAutomation.h  HttpClient.h  NetworkTypes.h  QuestApi.h  ShopApi.h  SocialManager.h  WebhookLogger.h  WingBuffManager.h
include/network/helpers/: DailyQuestHelper.h  WorldQuestHelper.h
include/progression/: AutoWaxTools.h  CandleRunner.h  PatchManager.h  RunConfig.h  WaxRunner.h
include/state/: ModState.h
include/ui/core/: App.h  Localization.h  TabBar.h  ThemeManager.h  WindowManager.h  colors.h  metrics.h
include/ui/data/: UIData.h
include/ui/helpers/: Animations.h  ImGuiHelpers.h  SubTabRenderer.h  Toast.h  VisualEffects.h
include/ui/overlays/: DebugOverlay.h  ESPOverlay.h  FavouritesOverlay.h  GameOverlay.h  MusicPlaybackOverlay.h  POIOverlay.h  QuickTeleportOverlay.h  SkyClockOverlay.h  UpdateNotificationOverlay.h
include/ui/panels/: MusicPanel.h  OutfitsPanel.h  PlayerPanel.h  ProgressionPanel.h  SettingsPanel.h  SocialPanel.h  TeleportPanel.h  UnlocksPanel.h  WorldPanel.h
include/ui/widgets/: BreakoutGame.h  Buttons.h  Cards.h  Controls.h  DoomGame.h  FlappyBirdGame.h  Icons.h  Layout.h  MemoryMatchGame.h  MusicPlayback.h  PongGame.h  Popups.h  SnakeGame.h  WidgetInternal.h
include/utils/common/: AccountHelper.h  DataExportImport.h  esp.h  obfuscate.h  vec2.h  vec3.h  vec4.h
include/utils/cosmetics/: CosmeticHelpers.h
include/utils/hooking/: dobby_wrapper.h
include/utils/logging/: log.h
include/utils/storage/: LocationStorage.h  MessageStorage.h  MusicSheetStorage.h
include/utils/strings/: DateFormatter.h  OutfitNameFormatter.h  SpellNameFormatter.h  StringUtils.h
resources/data/: DailyQuests_Desc.h  animations_json.h  candles_json.h  map_json.h  statues_json.h
resources/data/OOB/: Aviary Village - Empty World.h  Concert Hall - Boats.h  Concert Hall - Cello.h  Concert Hall - Piano.h  Eye of Eden - Boar Statue.h  Eye of Eden - Empty World.h  Eye of Eden - Rebirth.h  Hidden Forest - Airplane.h  Hidden Forest - Empty World.h  Home - Empty World.h  Isle of Dawn - Eden Gate.h  TGC Office - Satellite.h  Valley of Triumph - Penguin.h  Valley of Triumph - Sunset.h  Vault of Knowledge  - Elders.h  Vault of Knowledge - Empty World.h  Vault of Knowledge - Exterior.h
resources/data/OOB/Original/: Aviary Village - Empty World.json  Concert Hall - Boats.json  Concert Hall - Cello.json  Concert Hall - Piano.json  Eye of Eden - Boar Statue.json  Eye of Eden - Empty World.json  Eye of Eden - Rebirth.json  Hidden Forest - Airplane.json  Hidden Forest - Empty World.json  Home - Empty World.json  Isle of Dawn - Eden Gate.json  TGC Office - Satellite.json  Valley of Triumph - Penguin.json  (+3 more)
resources/data/Original/: Candles.json  DailyQuests_Desc.json
resources/data/timelines/: CandleSpace_Timelines.h  Dawn_Timelines.h  DayHubCave_Timelines.h  MainStreet_Timelines.h  Prairie_ButterflyFields_Timelines.h  Prairie_Island_Timelines.h  Prairie_NestAndKeeper_Timelines.h  Prairie_WildLifePark_Timelines.h  RainForest_Timelines.h  Rain_Timelines.h
resources/scripts/: EmbedBinary.ps1  ida_generate_signatures.py  ida_regenerate_offsets.py
src/core/: InitManager.cpp  UpdateChecker.cpp  main.cpp
src/data/: DataManager.cpp
src/data/loaders/: AssetLoader.cpp  LevelLoader.cpp
src/features/camera/: CameraFeatures.cpp
src/features/manager/: FeatureManager.cpp
src/features/music/: InstrumentManager.cpp
src/features/unlocks/: UnlockFeatures.cpp
src/features/world/: WorldFeatures.cpp
src/game/hooks/: AccountHooks.cpp  HookManager.cpp  LuaHook.cpp  MusicKeyHook.cpp  MusicRecordHook.cpp  PianoFrameHook.cpp  ProgressionHooks.cpp  ShoutHook.cpp
src/game/interop/: LuaFunctions.cpp  LuaHelpers.cpp  lua_bridge.cpp
src/game/memory/: Address.cpp  Memory.cpp  Patch.cpp  api.cpp
src/iconloader/: CustomIconLoader.cpp
src/network/: ApiClient.cpp  CollectiblesApi.cpp  EdenAutomation.cpp  HttpClient.cpp  QuestApi.cpp  ShopApi.cpp  SocialManager.cpp  WebhookLogger.cpp  WingBuffManager.cpp
src/network/helpers/: DailyQuestHelper.cpp  WorldQuestHelper.cpp
src/progression/: AutoWaxTools.cpp  CandleRunner.cpp  PatchManager.cpp  WaxRunner.cpp
src/state/: ModState.cpp
src/ui/core/: App.cpp  Localization.cpp  TabBar.cpp  ThemeManager.cpp  WindowManager.cpp  metrics.cpp
src/ui/helpers/: Animations.cpp  Toast.cpp  VisualEffects.cpp
src/ui/overlays/: DebugOverlay.cpp  ESPOverlay.cpp  FavouritesOverlay.cpp  GameOverlay.cpp  MusicPlaybackOverlay.cpp  POIOverlay.cpp  QuickTeleportOverlay.cpp  SkyClockOverlay.cpp
src/ui/panels/: MusicPanel.cpp  OutfitsPanel.cpp  PlayerPanel.cpp  ProgressionPanel.cpp  SettingsPanel.cpp  SocialPanel.cpp  TeleportPanel.cpp  UnlocksPanel.cpp  WorldPanel.cpp
src/ui/widgets/: BreakoutGame.cpp  Buttons.cpp  Cards.cpp  Controls.cpp  DoomGame.cpp  FlappyBirdGame.cpp  Icons.cpp  Layout.cpp  MemoryMatchGame.cpp  MusicPlayback.cpp  PongGame.cpp  Popups.cpp  SnakeGame.cpp
src/utils/common/: AccountHelper.cpp  DataExportImport.cpp  esp.cpp
src/utils/hooking/: dobby_wrapper.cpp
src/utils/logging/: log.cpp
(+13 files in other folders)
